tests/ui/associated-types/consecutive-shorthand-projections-ambiguous.stderr
error[E0221]: ambiguous associated type `Type` in bounds of `<T as HaveItAll>::See`
  --> $DIR/consecutive-shorthand-projections-ambiguous.rs:13:26
   |
LL |     type Type;
   |     --------- ambiguous `Type` from `ChooseMe`
...
LL |     type Type;
   |     --------- ambiguous `Type` from `PickMe`
...
LL | struct Env<T: HaveItAll>(T::See::Type);
   |                          ^^^^^^^^^^^^ ambiguous associated type `Type`
   |
help: use fully-qualified syntax to disambiguate
   |
LL | struct Env<T: HaveItAll>(<<T as HaveItAll>::See as ChooseMe>::Type);
   |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
help: use fully-qualified syntax to disambiguate
   |
LL | struct Env<T: HaveItAll>(<<T as HaveItAll>::See as PickMe>::Type);
   |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0221`.
